# actix-session-sqlite

./: .env  .gitignore  Cargo.toml  build.rs  session.db
.sqlx/: query-17dbf82ce19ef2b8dc97b5c14f818a513a32d64376e29b4adc92927836f1653f.json  query-2958848df10fde6cba31420d445ae9c8b57be448f1ab0dd886ae1c02465edcf9.json  query-2e23e2ee3e66116219a35e9aeeee2927e6086ff3b6bd9b976d892f563c94e293.json  query-7a625368d1f9d1d474dba5c515955557d0251142689bdc5c87ff6a8007373b64.json  query-986f50825c915d9ac82e10b04ac5d0c5869d3ab4b236dea959b2f6322702f90a.json  query-9ee872997131d70e4949d1e5f978c9be2c4320b9903484a2f7f76fd214bee21f.json  query-b7925d487c9f80301c95a3d4fe515177ef7cde54d35e721dbdd6c2d141116958.json  query-baeea652312db460ff98b77890dcf2f66afd8e95f32d970f7751f1dc96c5c8d6.json  query-bfc47d5e96febe85d4f9e70fa79e0e666bfbca881ee1810a13f3a7887a2488eb.json  query-f677d2282bdfff6fd1c08df03e423e2d93e48a473dc0892a7fee85871d0ca166.json
migrations/: 20240818202050_init.up.sql
src/: gradual_transition_shim.rs  lib.rs
