[package]
name = "session_sqlite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }

tracing = "0.1.19"

log = "0.4.22"
chrono = { version= "0.4.26", features = ["serde", "unstable-locales"] }
chrono-tz = {version="*", features=["filter-by-regex", "arbitrary", "serde","case-insensitive"]}

serde = "1.0"
serde_json = "1.0"

actix-web = "4"
actix-session = { version = "0.10.0" }

sqlx = {version = "0.8.0", features = ["runtime-tokio", "sqlite", "macros", "uuid", "chrono", "json", "tls-rustls"]}
hex = "0.4.3"
tracing-futures = "0.2.5"
