[package]
name = "actix-session-sqlite"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }

tracing = "0.1.19"
tracing-futures = "0.2.5"

chrono = { version= "0.4.26", features = ["serde", "unstable-locales"] }

serde = "1.0"
serde_json = "1.0"

actix-web = "4"
actix-session = { version = "0.10.0", features = ["cookie-session"] }

sqlx = {version = "0.8.0", features = ["runtime-tokio", "sqlite", "macros", "chrono", "json", "uuid", "tls-rustls", "migrate"]}

tokio = { version = "1.39.3", features = ["rt", "rt-multi-thread", "macros"] }
uuid = { version = "1.10.0", features = ["v7"] }
